--- a/elastic/locale/pt_BR/LC_MESSAGES/django.po
+++ b/elastic/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-04 06:25+0000\n"
+"POT-Creation-Date: 2019-10-23 19:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
 #: elastic/forms.py:26
 msgid "Elastic Search Host"
 msgstr "Servidor do Elastic Search"
@@ -24,7 +25,9 @@ msgstr "Servidor do Elastic Search"
 #: elastic/forms.py:30
 msgid ""
 "The host url to the elastic search server, e.g. https://xxxxxxxx-bonsai.net"
-msgstr "A url do host do servidor do Elastic Search utilizado, ex.: https://xxxxxxxx-bonsai.net"
+msgstr ""
+"A url do host do servidor do Elastic Search utilizado, ex.: https://xxxxxxxx-"
+"bonsai.net"
 
 #: elastic/models.py:5
 msgid "Host Url"
