Ajustes na nuvem, tradução, legenda, info 2

--- a/dashboards/locale/pt_BR/LC_MESSAGES/django.po
+++ b/dashboards/locale/pt_BR/LC_MESSAGES/django.po
@@ -571,8 +571,8 @@ msgstr "Nuvem"
 msgid "Resources accessess"
 msgstr "Recursos acessados"
 
-
-msgid "Access number in each class recourse in this subject."
+#: dashboards/templates/dashboards/teacher/_resources_table.html:23
+msgid "Access number in each class recourse in this subject"
 msgstr "Número de acessos em cada recurso da classe nesta disciplina."
 
 
