--- a/security/locale/pt_BR/LC_MESSAGES/django.po
+++ b/security/locale/pt_BR/LC_MESSAGES/django.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: security/models.py:17
 msgid "Don't allow users to self-register"
-msgstr "Não permiter usuários a se auto-cadastrem"
+msgstr "Não permitir usuários a se auto-cadastrem"
 
 #: security/models.py:18
 msgid "Put system in maintenance mode"
