Support feature adjusts

--- a/chat/locale/pt_BR/LC_MESSAGES/django.po
+++ b/chat/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-04 05:02+0000\n"
+"POT-Creation-Date: 2020-08-04 18:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -317,7 +317,9 @@ msgstr "## Solicitação de suporte"
 msgid ""
 "Your message was sent to our team of support e sould be responded within 48 "
 "hours."
-msgstr "Sua mensagem foi enviada para a nossa equipe de suporte e deverá ser respondida em até 48 horas."
+msgstr ""
+"Sua mensagem foi enviada para a nossa equipe de suporte e deverá ser "
+"respondida em até 48 horas."
 
 #~ msgid "Only my messages"
 #~ msgstr "Apenas minhas mensagens"
